# beego/indra-api/models/user.go
@@ -33,6 +33,13 @@ type Profile struct {
 	Email   string
 }
 
+//struct for Response Login
+type ResponseLogin struct {
+	Status int `json:"status"`
+	Message string `json:"message"`
+	Tokensting string `json:"tokensting"`
+}
+
 func AddUser(u User) string {
 	u.Id = "user_" + strconv.FormatInt(time.Now().UnixNano(), 10)
 	UserList[u.Id] = &u
