# beego/indra-api/swagger/swagger.json
@@ -1,12 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "beego Test API",
-        "description": "beego has a very cool tools to autogenerate documents for your API",
+        "title": "Indra beego API",
+        "description": "This is my research about how to make documentation in beego",
         "version": "1.0.0",
-        "termsOfService": "http://beego.me/",
+        "termsOfService": "https://indraoctama.com/",
         "contact": {
-            "email": "astaxie@gmail.com"
+            "email": "omyank2007i@gmail.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -218,13 +218,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{ \"status\": 1, \"message\": \"login success\", \"tokensting\": \"...\" }",
+                        "description": "",
                         "schema": {
-                            "$ref": "#/definitions/.ResponseLogin"
+                            "$ref": "#/definitions/models.ResponseLogin"
                         }
                     },
                     "403": {
-                        "description": "{object} ResponseLogin { \"status\": 0, \"message\": \"user not exist\", \"tokensting\": \"...\" }"
+                        "description": "{object} models.ResponseLogin"
                     }
                 }
             }
@@ -334,9 +334,6 @@
         }
     },
     "definitions": {
-        ".ResponseLogin": {
-            "type": "object"
-        },
         "models.Object": {
             "title": "Object",
             "type": "object",
@@ -368,6 +365,22 @@
                     "type": "string"
                 },
                 "Gender": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ResponseLogin": {
+            "title": "ResponseLogin",
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "tokensting": {
                     "type": "string"
                 }
             }
